src/test/deca/syntax/invalid/resultats/test11_float-synt.res
./src/test/deca/syntax/invalid/test11_float.deca:16:7: mismatched input '.' expecting {INT, '-', 'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '(', ')', '!', FLOAT, STRING}
